[gd_scene load_steps=8 format=2]

[ext_resource path="res://Drawable/Market/Market.gd" type="Script" id=1]
[ext_resource path="res://Drawable/HandDrawable.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/XoloniumFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/art/TileMarketBackground.png" type="Texture" id=4]
[ext_resource path="res://Drawable/Card/TileCardDrawable.tscn" type="PackedScene" id=5]
[ext_resource path="res://Drawable/Town/Town.tscn" type="PackedScene" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -718.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyMarket" type="Panel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.25
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyCards" type="HBoxContainer" parent="Panel/MoneyMarket"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -455.0
margin_bottom = -64.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefillCards" type="Button" parent="Panel/MoneyMarket"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -313.0
margin_top = -67.0
custom_fonts/font = ExtResource( 3 )
text = "Refill Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMarket" type="TextureRect" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -159.0
margin_right = -2.0
margin_bottom = 161.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1" parent="Panel/TileMarket" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -144.0
margin_right = -75.0
margin_bottom = -16.0

[node name="Card2" parent="Panel/TileMarket" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 175.0
margin_top = -145.0
margin_right = 303.0
margin_bottom = -17.0

[node name="Card3" parent="Panel/TileMarket" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 177.0
margin_top = 17.0
margin_right = 305.0
margin_bottom = 145.0

[node name="Card4" parent="Panel/TileMarket" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = 17.0
margin_right = -76.0
margin_bottom = 145.0

[node name="Hand" parent="Panel" instance=ExtResource( 2 )]
anchor_top = 1.0
margin_top = -208.0

[node name="TileMap" parent="." instance=ExtResource( 6 )]
position = Vector2( 650, 1 )

[connection signal="pressed" from="Panel/MoneyMarket/RefillCards" to="." method="_on_RefillCards_pressed"]
